# licenses

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: nightly.yml  on_commit.yml
src/: cargo_metadata.rs  cargo_tree.rs  check_licenses.rs  collect_licenses.rs  config.rs  copy_licenses.rs  crate_directory.rs  dependencies.rs  dependency.rs  dir_entry.rs  file_io.rs  file_system.rs  find_and_copy_licenses.rs  find_licenses.rs  is_license.rs  license.rs  log.rs  macros.rs  main.rs  split_licenses.rs  summarise.rs  trait_directory_ops.rs  validate_licenses.rs
src/licenses/: check.rs  collect.rs  copy.rs  diff.rs  is_license.rs  mod.rs  status.rs  subcommand.rs  summarise.rs  unused.rs  validate.rs
tests/: integration.rs
tests/data/: unused_config.toml
tests/stdout/: help  summary
