[package]
name = "licenses"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "Cargo subcommand for collecting licenses."
keywords = ["cargo-subcommand", "tool", "licenses"]
categories = ["development-tools::cargo-plugins"]
repository = "https://github.com/lhalf/licenses"
exclude = [".gitignore", "/.github", "justfile"]

[[bin]]
name = "cargo-licenses"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
itertools = { version = "0.14.0", default-features = false, features = ["use_std"] }
clap = { version = "4.5.55", default-features = false, features = ["derive", "std", "help", "usage"] }
cargo_metadata = { version = "0.23.1", default-features = false }
colored = { version = "3.1.1", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.149", default-features = false }
spdx = { version = "0.13.3", default-features = false, features = ["text"] }
strsim = { version = "0.11.1", default-features = false }
toml = { version = "0.9.11", default-features = false, features = ["serde", "display", "parse"] }
indicatif = { version = "0.18.3", default-features = false }

[dev-dependencies]
autospy = { version = "1.6.1", default-features = false, features = ["test"] }
strip-ansi-escapes = { version = "0.2.1", default-features = false }
tempfile = { version = "3.24.0", default-features = false }
cargo_toml = { version = "0.22.3", default-features = false }